[tool.poetry]
name = "casa-reddit"
version = "0.1.0"
description = ""
authors = ["JoaoDoBread <joaovictorslf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydotenv = "^0.0.7"
environs = "^9.4.0"
marshmallow = "^3.14.1"
pymongo = {extras = ["srv"], version = "^4.0.1"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
commit-linter = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
